# knowledge_wiki_agent

./: .env.example  .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  rag.py  requirements.txt  skill_loader.py  test_embed.py  vector_store.py
skills/: calculator.md
static/: index.html
